@@ -1,3 +1,9 @@
+2008-09-22 Frank Naegler  <typo3@naegler.net>
+
+	* added member invite function for group editing settings
+	* added new function isFriendOfCurrentlyLoggedInUser to the tx_community_model_UserGateway
+	* bugfix: initialize groupGateway in tx_community_controller_ListGroupsApplication
+	
 2008-09-21 Ingo Renner  <ingo@typo3.org>
 
 	* added a way to exclude community application from being listed in the community plugin's flexform
